--- a/index.yml
+++ b/index.yml
@@ -1,27 +1,14 @@
 # yaml-language-server: $schema=https://vscodeedu.com/schema/course-v2.schema.json
 id: course1
 title: asd
+duration: 12
 level: beginner
+description: asdasd
+objectives: asdasd
+prerequisites: asdasdasd
 contacts:
   - displayName: Alex Britez
     pictureUrl: https://avatars.githubusercontent.com/u/57981398?v=4
     homePageUrl: https://github.com/unthinkmedia
 units:
-  - id: unit1
-    title: Introduction
-    objectives: Learn about the course and its objectives.
-    lessons:
-      - id: lesson1
-        title: About this course
-        objectives: Understand the course structure and objectives.
-        lessonParts:
-          - id: lessonpart1
-            title: Welcome to asd
-            duration: 5
-            content: |-
-              **Welcome to the course authoring!**
-              You can use Markdown to format your content.
-            showContent: true
-            showEditor: false
-            showTerminal: false
-            showExplorer: false
+  - unit1/index.yml
