--- a/unit1/lesson1/lessonpart1.yml
+++ b/unit1/lesson1/lessonpart1.yml
@@ -1,11 +1,8 @@
-# yaml-language-server: $schema=https://vscodeedu.com/schema/course-v2.schema.json
+# yaml-language-server: $schema=https://vscodeedu.com/assets/schema/course-v2.schema.json
 id: lessonpart1
 title: Welcome to asd
 duration: 5
 content: |-
   **Welcome to the course authoring!**
-  You can use Markdown to format your content.
-showContent: true
-showEditor: false
-showTerminal: false
-showExplorer: false
+
+  You can use Markdown to format your content. This an interesting update
